--- a/colorGame.css
+++ b/colorGame.css
@@ -20,18 +20,23 @@ body {
 
 
 #container {
-	margin: 0px auto;
+	margin: 20px auto;
 	max-width: 600px;
 }
 
 h1 {
 	text-align: center;
+	letter-spacing: 1px;
 	line-height: 1.1;
 	font-weight: normal;
 	color: white;
-	background: steelblue;
+	background-color: #A9AEB0;
 	margin: 0;
 	padding: 20px 0;
+	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+                 0px 8px 13px rgba(0,0,0,0.1),
+                 0px 18px 23px rgba(0,0,0,0.1);
+    font-weight: bold;
 }
 
 #colorDisplay {
