--- a/colorGame.css
+++ b/colorGame.css
@@ -52,7 +52,7 @@ h1 {
 	background: white;
 	height: 30px;
 	text-align: center;
-	color: black;
+	
 }
 
 .selected {
@@ -78,4 +78,12 @@ button {
 button:hover {
 	color: white;
 	background: steelblue;
+}
+
+.redText{
+	color: red;
+}
+
+.greenText{
+	color: green;
 }
